Closed Bug 1515556 Opened 5 years ago Closed 5 years ago

Clang format breaks comments part 3

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox66 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1508472 +++

Part 3 from Bug 1508472 didn't land on time
https://bugzilla.mozilla.org/show_bug.cgi?id=1508472#c51

and now conflicts with changes for bug 1511854.
Attachment #9032616 - Attachment description: Bug 1508472 - Part 3: Third batch of comment fix-ups in preparation for the tree reformat (layout/) r?ehsan → Bug 1508472 - Part 3: Third batch of comment fix-ups in preparation for the tree reformat (layout/) r=Ehsan
Attachment #9032616 - Attachment description: Bug 1508472 - Part 3: Third batch of comment fix-ups in preparation for the tree reformat (layout/) r=Ehsan → Bug 1515556 comment fix-ups for the tree reformat (layout/) r=Ehsan
Depends on: 1470340
Pushed by ktomlinson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8ad209d77614
comment fix-ups for the tree reformat (layout/) r=Ehsan,heycam
https://hg.mozilla.org/mozilla-central/rev/8ad209d77614
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
No longer depends on: 1470340
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: