Bug 1515556 comment fix-ups for the tree reformat (layout/) r=Ehsan,heycam

Differential Revision: https://phabricator.services.mozilla.com/D13125