layout/tables/nsCellMap.h
@@ -288,13 +288,13 @@ class nsCellMap {
    *
    * @param aMap               - reference to the table cell map
    * @param aCellFrame         - a pointer to the cellframe which will be
-   * appended to the row
+   *                             appended to the row
    * @param aRowIndex          - to this row the celldata entry will be added
    * @param aRebuildIfNecessay - if a cell spans into a row below it might be
    *                             necesserary to rebuild the cellmap as this
-   * rowspan might overlap another cell.
+   *                             rowspan might overlap another cell.
    * @param aDamageArea        - area in cellmap coordinates which have been
-   * updated.
+   *                             updated.
    * @param aColToBeginSearch  - if not null contains the column number where
    *                             the search for a empty or dead cell in the
    *                             row should start
